--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,12 @@
 learning_rate: 0.000066
-batch_size: 512
+probe_learning_rate: 0.001
+batch_size: 64
 num_workers: 16
+model_dim: 512
+subject_embedding_dim: 16
+projector_dim: 1024
+max_epochs: 200
+tasks:
+  - "band"
+  - "phase"
+  - "amp"
